# hello

./: .gitattributes  .gitignore  CMakeLists.txt  README.txt  compilers.cmake  hello.sln  project.cmake
gtest/: CMakeLists.txt
hello/: CMakeLists.txt  hello.vcproj
hello-java/: CMakeLists.txt  gen-headers.bat
hello-java/distrib/: hello-java.bat  hello-java.sh
hello-java/src/net/cryp7/range/hello/: Hello.java  NativeOutput.java
hello-unittests/: CMakeLists.txt  main.cc
hello-unittests/message/: test-message.cc
hello-unittests/output/: test-output.cc
hello/include/: plugins.h
hello/src/: main.c  plugins.c
message/: CMakeLists.txt  message.vcproj
message/include/: message.h
message/src/: message.c
output/: CMakeLists.txt  output.vcproj
output-jni/: CMakeLists.txt
output-jni/include/: net_cryp7_range_hello_NativeOutput.h
output-jni/src/: NativeOutput.c
output/include/: output.h
output/src/: output.c
